src/main/java/lexical/test/failing/03.ru
2132133nsadn

/? ERROR: LEXICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 8 | Literal entero mal formado: 2132133n |